--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
-git :
-  depth : 5
-jobs :
-  include :
-    - stage : "Build and Test Java"
-    language : java
-    jdk : oraclejdk11
-    before_script :
-      - cd sample-application-backend
-    - stage : "Build and Test Nodejs"
-    language : node.js
-    node_js : "12.20"
-    before_script :
-      - cd sample-application-frontend
+git: 
+  depth: 5
+jobs: 
+  include: 
+    - 
+      before_script: 
+        - "cd sample-application-backend"
+      jdk: oraclejdk11
+      language: java
+      stage: "Build and test Java"
+    - 
+      before_script: 
+        - "cd sample-application-frontend"
+      language: node.js
+      stage: "Build ans Test Nodejs"
 cache :
   directories :
     - "$HOME/.m2/repository"
