use sonar cloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ stages:
 
 addons :
   sonarcloud :
-    organization : "devops-cpe"
+    organization : "charlottelinagauthier"
     token : "$SONARCLOUD_TOKEN"
-    
+
 jobs:
   include:
   - stage: "Build and Test"
@@ -29,14 +29,14 @@ jobs:
     before_script:
     - cd sample-application-backend
     script:
-    - docker build -t charlottelina29/devops:backend .
+    - docker build -t charlottelina29/backend:latest .
     - docker login -p $DOCK_PASS -u $DOCK_ID
     - docker push charlottelina29/devops:backend
   - stage: "Package"
     before_script:
     - cd sample-application-frontend
     script:
-    - docker build -t charlottelina29/devops:frontend .
+    - docker build -t charlottelina29/frontend:latest .
     - docker login -p $DOCK_PASS -u $DOCK_ID
     - docker push charlottelina29/devops:frontend
 
